updated index, added css&js

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Under construction..
+<html>
+<link rel="stylesheet" href="matrix.css"/>
+<script src="matrix.js"></script>
+<canvas id="matrix"><canvas>
+
+</html>
