--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <link rel="stylesheet" href="matrix.css"/>
 <script src="matrix.js"></script>
 <canvas id="matrix"><canvas>
