--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
 <link rel="stylesheet" href="matrix.css"/>
+    </head>
+
+<canvas id="matrix"></canvas>
 <script src="matrix.js"></script>
-<canvas id="matrix"><canvas>
+    
 
 </html>
