--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-<link rel="stylesheet" href="matrix.css"/>
+		<link rel="stylesheet" href="matrix.css"/>
     </head>
+	<body onresize='resize_canvas()'>
 
-<canvas id="matrix"></canvas>
-<script src="matrix.js"></script>
+		<canvas id="matrix"></canvas>
+		<script src="matrix.js"></script>
+
+
+
+	</body>
     
 
 </html>
