--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<link rel="stylesheet" href="matrix.css"/>
+		<link rel="stylesheet" href=""/>
 
     </head>
-	<body onresize='resize_canvas()'>
-
-		<canvas id="matrix"></canvas>
-
+	<body>
+	<h1><div style="color: green">X</div><div style="color: yellow">Y</div><div style="color: blue">Z</div> Under construction
 
 
 	</body>
-    <script src="matrix.js"></script>
 
 </html>
