--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 
     </head>
 	<body>
-	<h1><div style="color: green">X</div><div style="color: yellow">Y</div><div style="color: blue">Z</div> Under construction
+	<p>XYZ Under construction
+	</p>
 
 
 	</body>
+	<style>
+	p {
+		font-family: Arial;
+	}
+	</style>
 
 </html>
